fixed scrollbar bug

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,12 @@ body, html{
 .flex {
     display: flex;
 }
+
+::-webkit-scrollbar {
+    width: 0px;  /* remove scrollbar space */
+    background: transparent;  /* optional: just make scrollbar invisible */
+}
+
 /*---------------------------------------------------------------------------
   -                               GRID                                      -
   --------------------------------------------------------------------------- */
